--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "moment": "^2.30.1",
     "vue": "^3.5.13",
+    "vue3-carousel": "^0.14.0",
     "vue3-popper": "^1.5.0"
   },
   "devDependencies": {
