--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.8.3",
     "moment": "^2.30.1",
+    "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue3-carousel": "^0.14.0",
     "vue3-popper": "^1.5.0"
