--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
+    "@heroicons/vue": "^2.2.0",
+    "@vueuse/core": "^13.0.0",
     "axios": "^1.8.3",
     "moment": "^2.30.1",
     "pinia": "^3.0.1",
